- CHG: The 'recursive' checkbox is now disabled when the property page is
       shown for files since there the recursive option doesn't make sense
       anyway. (Stefan)
- CHG: When updating a working copy, the progress dialog doesn't show inoperable
       updates to folders anymore. This makes it look more consistent with the
       command line client. (Stefan)

Version 1.1.3
- ADD: Autocompletion for paths/filenames in the commit dialog. (Stefan)
- ADD: Spell checker suggestions when pressing Ctrl-Tab. (Stefan)
- ADD: New Menuentry/Toolbarbutton in TortoiseMerge to mark a conflicted
       file as resolved. (Stefan)
- CHG: Improved refreshing of icons after a TSVN operation. (Will)
- CHG: Major code cleanup throughout the whole project. (Will)
- CHG: Use the same colors for the authors in all graphs. (Stefan)
- BUG: The revision graph got confused with renames. (Stefan)
- BUG: The focused item was lost in the repository browser when closing
       a tree item. (George Wieggers)
- BUG: If a folder was deleted from the commit dialog, its children weren't
       removed from the list shown. (Stefan)
- BUG: if more than one file or filemask were ignored, the parent folder was
       added to the list every time instead of just once. (Stefan)
- BUG: The apr-iconv library wasn't patched. (Stefan)
- BUG: Fix wrong axis labels in the 'commits by author' graph. (Stefan)
- BUG: The "select all" checkbox behave three state even when clicking it. (Will)
- BUG: Some dialogs were resizable even though they shouldn't be. (Stefan)
- BUG: Adding and committing of files with a reversed sort order of
       the files in the add/commit dialog didn't work correctly. (Will)
- BUG: The drive type wasn't recognized correctly on Win98. (Will)
- BUG: the log message history was truncated if the log message exceeded the
       combobox limit. (Stefan)
- BUG: The number of selected files was shown wrong in the commit dialog. (Stefan)

Version 1.1.2