@@ -1,3 +1,4 @@
+- ADD: Option to resolve a conflicted file in the status list control. (Stefan)
 - CHG: The 'recursive' checkbox is now disabled when the property page is
        shown for files since there the recursive option doesn't make sense
        anyway. (Stefan)
